--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <a class="navbar-brand" href="{% url 'index' %}">
-        <img src="#" alt="Logo" width="50" height="50">
+        <img src="{% static 'logo.jpg' %}" alt="Logo" width="60" height="45">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
