--- a/templates/scrapper/action.html
+++ b/templates/scrapper/action.html
@@ -41,7 +41,7 @@
             {% endif %}
         </div>
         <div class="col-sm">
-            <img src="{% static 'pdf-placeholder.png' %}" alt="PDF placeholder" width="540" height="600">
+            <img src="{% static 'Section-9.jpg' %}" alt="PDF placeholder" width="540" height="600">
         </div>
     </div>
 {% endblock %}
