Handled errors with empy key-value pair

--- a/templates/scrapper/action.html
+++ b/templates/scrapper/action.html
@@ -42,12 +42,12 @@
         </div>
         {% if data %}
             <div class="col-sm">
-                <img src="{% static 'Section-9.jpg' %}" alt="PDF placeholder" width="540" height="600">
+                <img src="{% static 'Section-9.jpg' %}" alt="PDF placeholder">
             </div>
         {% endif %}
         {% if pdfpath %}
             <div class="col-sm">
-                <img src="{% static 'Section-9.jpg' %}" alt="PDF placeholder" width="540" height="600">
+                <img src="{% static 'Section-9.jpg' %}" alt="PDF placeholder">
             </div>
         {% endif %}
     </div>
